Change image to falcon-9.jpg

--- a/_config.yml
+++ b/_config.yml
@@ -9,24 +9,24 @@ theme_settings :
 
   # Profile Settings
   profile :
-    image : assets/img/me.jpeg
+    image : assets/img/falcon-9.jpg
     username : Julio Cesar Bonon
     description : Passionate about software development, hardware and music 🎸.
     experience :
       - start : 2019-08-11
         end : present
         experience : Toradex, Embedded Linux Intern
-    skills : 
+    skills :
       - skill : Embedded Linux, Docker and Python
         value : 85  # Percent value
-        
+
   # Icons
   icons :
     email: juliocesarbonon@gmail.com
     linkedin: https://www.linkedin.com/in/julio-bonon-340806122/
     github: juliobonon
-    gitlab: 
-    bitbucket: 
+    gitlab:
+    bitbucket:
     google_plus:
     twitter:
     youtube:
